# simple_navigation_goals

./: CMakeLists.txt  initial_goal.yaml
src/: base_link_navigation_client.cpp  controller_spin_recover.cpp  controller_spin_recover.h  map_navigation_client.cpp  publish_base_link_goal.cpp  publish_map_goal.cpp
